Update with CTC Beam Search Decoder

--- a/requirements-deploy.txt
+++ b/requirements-deploy.txt
@@ -1,6 +1,7 @@
---find-links https://download.pytorch.org/whl/torch_stable.html
-torch==1.12.1+cpu
-torchvision==0.13.1+cpu
+--find-links https://download.pytorch.org/whl/cpu
+torch
+torchvision
+torchaudio
 numpy
 fastapi
 uvicorn
