--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 --find-links https://download.pytorch.org/whl/torch_stable.html
-torch==1.12.1
-torchvision==0.13.1
+torch
+torchvision
+torchaudio
 numpy
 tqdm
 sklearn
