--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,8 @@ name: Docker Image CI
 
 on:
   pull_request:
-    branches: [ "main", "dev ]
+    branches: [ "main", "dev" ]
+  workflow_dispatch:
 
 jobs:
 
@@ -10,7 +11,34 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        python-version: ["3.8"]
+
     steps:
     - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -e .
+
+    - name: Train Model
+      run: |
+        python src/dev/train.py -ep 20 -d greedy
+
+    - name: Publish image to Docker Hub
+      uses: elgohr/Publish-Docker-Github-Action@master
+      with: 
+        name: lequan2902/captcha_ctc
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        dockerfile: Dockerfile
+        
